examples/test/testpolicy3487.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3487
  namespace: namespace173
spec:
  podSelector:
    matchLabels:
      key27: value21
      key49: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value45
          key8: value36
          key44: value3
      podSelector:
        matchLabels:
          key8: value3
          key46: value35
